--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jquery": "^3.5.0",
+    "react-spinners": "^0.8.1"
   },
   "devDependencies": {
+    "babel-plugin-emotion": "^10.0.33",
     "concurrently": "^4.0.1"
   }
 }
